<resources>
    <string name="app_name">PAM_672020273</string>
    <string name="action_settings">Settings</string>
    <string name="onClick">btnClicked</string>
    <string name="deleteContact">Hapus Data ?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="title_activity_memolite_main">MemoliteMainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="txtJari">"Jari-jari"</string>
    <string name="txtTinggi">"Tinggi"</string>
    <string name="txtHitung">"Hitung"</string>
    <string name="txtNol">"0"</string>
    <string name="buttonClicked">onClick</string>

    <!-- Fragment -->
    <string name="btn1text">Frame SATU</string>
    <string name="btn2text">Frame DUA</string>
    <string name="btntext">Toast</string>
    <string name="dataHint">Data:</string>
    <string name="frame1teks">Toast Fragment Satu</string>
    <string name="frame2teks">Toast Fragment Dua</string>

    <!-- Google Maps-->
    <string name="title_activity_maps_new">Map</string>
    <string name="google_maps_key">AIzaSyBH3ILXDb44wKyAeLcOPnrpJz2gVePRVhQ</string>

    <!-- Media-->
<!--    <string name="buttonClicked">onClick</string>-->
    <string name="strAudioButton">"A U D I O"</string>
    <string name="strVideoButton1">"Cari"</string>
    <string name="strVideoButton2">"V I D E O"</string>
    <string name="strVidURLSample">"https://static.videezy.com/system/resources/previews/000/039/521/original/No-Signal---Bad-TV.mp4"</string>
</resources>